# hihello-project

./: .gitignore  Dockerfile  Procfile  README.md  build.gradle  docker-compose.yml  exception.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ssh -T git@github.com  ssh -T git@github.com.pub  vite.config.js
.ebextensions/: hihello-start.config
.github/ISSUE_TEMPLATE/: 기능구현.md  디자인.md  문서화.md  버그수정.md  자잘한수정.md  테스트.md
.github/workflows/: deploy.yml  develop.yml  prod.yml
.platform/: nginx.config
app/: chain.py  chat.py  llm.py  main.py  server.py  translator.py
app/chatbot_category/: model.py  router.py
app/chatbot_data/: model.py  router.py
chatbot_category/: model.py  router.py  schema.py
chatbot_data/: model.py  router.py
db_connection/: rds_connection.py
hihello-chat/.github/workflows/: deploy.yml
hihello-elasticsearch/: Dockerfile  README.md
hihello-elasticsearch/.github/workflows/: deploy.yml
hihello-fastapi/: .gitignore
hihello-fastapi/.github/: pull_request_template.md
hihello-fastapi/.platform/: nginx.config
hihello-fastapi/app/: exception.py
hihello-fastapi/app/chatbot_data/: schema.py
hihello-fastapi/app/db_connection/: pinecone_connection.py
hihello-ollama/: pyproject.toml
hihello-ollama/app/: chat.py  server.py
hihello-ollama/service/: main.py
hihello-redis/: README.md
hihello-redis/service/: sparse_encoder.pkl
hihello-spring/: .gitignore  build.gradle  docker-compose.yml  package-lock.json  settings.gradle
hihello-spring/.ebextensions/: hihello-start.config
hihello-spring/.github/ISSUE_TEMPLATE/: 파일수정.md
hihello-spring/.platform/: nginx.config
hihello-vue/: index.html  package-lock.json  vite.config.js
hihello-vue/.github/ISSUE_TEMPLATE/: 리펙토링.md
hihello-vue/.github/workflows/: develop.yml
hihello-vue/src/: App.vue  main.js
hihello-vue/src/components/: AsideComponent.vue  DeleteModalComponent.vue  EmployeeProfile.vue  SearchBarComponent.vue
hihello-vue/src/router/: ChatbotRouter.js  FinalEvalRouter.js  TaskEvalRouter.js  index.js
hihello-vue/src/services/: AlramApi.js  ChatApi.js  FileApi.js  QuizApi.js  QuizCategoryApi.js  TaskListApi.js  TaskModifyApi.js  WikiApi.js  axios.js
hihello-vue/src/stores/: UserStore.js  sse.js
hihello-vue/src/styles/: reset.css
pinecone/: app.py  main.py  sparse_encoder.pkl
pinecone/.cache/files/: test.docx
service/: main.py
src/: App.vue  main.js
src/api/: axios.js
src/assets/: reset.css
src/components/: AddCategoryModal.vue  AddTask.vue  AlarmModal.vue  AsideComponent.vue  ChatBotModal.vue  ChatModal.vue  DeleteModalComponent.vue  EditorComponent.vue  EmployeeProfile.vue  ListComponent.vue  QuizCategoryComponent.vue  SearchBarComponent.vue  UserRollRectangle.vue  WhiteBoxComponent.vue  WhiteBoxListComponent.vue
src/main/resources/: application.properties  application.yml  data.sql  data2.sql  hihellodb.sql
src/router/: ChatRouter.js  FinalEvalRouter.js  MainRouter.js  MentoringRouter.js  OnboardingRouter.js  PeerReviewRouter.js  QuizRouter.js  TaskEvalRouter.js  TaskIndRouter.js  TaskRouter.js  UserRouter.js  WikiRouter.js  index.js
src/services/: AlramApi.js  ChatApi.js  ChatbotApi.js  EvalListApi.js  FileApi.js  FinalEvalApi.js  GroupEvalAPI.js  GroupingApi.js  MenteeTaskDetailReadApi.js  MenteeTaskDetailReadPage.js  MentoringApi.js  OnBoarding.js  OnBoardingAPI.js  OnboardingDataApi.js  PeerReviewApi.js  QuizApi.js  QuizCategoryApi.js  TaskAdd.js  TaskAddApi.js  TaskApi.js  TaskEvalApi.js  TaskEvalResultApi.js  TaskIndManageApi.js  TaskList.js  TaskListApi.js  TaskModifyApi.js  UserApi.js  WikiApi.js  axios.js  taskIndManage.js
src/stores/: ChatStore.js  NotificationStore.js  QuizStore.js  UserStore.js  WebSocketStore.js  sse.js
src/styles/: reset.css
src/styles/chatbot/: ChatbotCustom.css
src/styles/final-eval/: FinalEvalDetailPage.css  FinalEvalListPage.css  FinaleEvalListPage.css
src/styles/onboarding/: BreakApply.css  OnboardingConferenceRoom.css  OnboardingData.css
src/styles/peer-review/: GroupEval.css  PeerReview.css  PeerReviewList.css
src/styles/quiz/: HrQuiz.css  HrQuizResult.css  Quiz.css  QuizResult.css
src/styles/task/: GroupingPage.css  MenteeTaskDetailReadPage.css  MentorTaskDetailReadPage.css  TaskAddPage.css  TaskListPage.css  TaskModifyPage.css
src/styles/task-Ind/: TaskIndManage.css
src/styles/task-eval/: TaskEvalResultDetailReadModal.css  TaskEvalResultDetailReadPage.css
src/styles/user/: LoginPage.css  MenteeInfoPage.css  MenteeOnboardingPage.css  MentorInfoPage.css
src/styles/wiki/: EditorComponent.css  WikiUpdatePage.css
src/views/: MainPage.vue
src/views/chat/: Chatting.vue
src/views/chatbot/: AddChatbotCategoryModal.vue  AddChatbotModal.vue  ChatbotCategoryComponent.vue  HrChatbotCustomPage.vue  UpdateChatbotModal.vue
src/views/final-eval/: FinalEvalDetailReadPage.vue  FinalEvalListReadPage.vue
src/views/mentoring/: MentoringMatchingCreatePage.vue  MentoringPlaningListPage.vue  MentoringPlanningCreate.vue  MentoringPlanningCreatePage.vue  MentoringPlanningDetailPage.vue  MentoringPlanningListPage.vue
src/views/onboarding/: BreakApplyPage.vue  ConferenceRoomPage.vue  MainPage.vue  OnboardingDataPage.vue
src/views/peer-review/: GroupEval.vue  HrPeerReviewDetailModal.vue  HrPeerReviewListPage.vue  HrPeerReviewPage.vue
src/views/quiz/: AddQuizCategoryModal.vue  AddQuizModal.vue  HrQuizPage.vue  HrQuizResultPage.vue  QuizPage.vue  QuizResultPage.vue  UpdateQuizModal.vue
src/views/task/: GroupingPage.vue  MenteeTaskDetailReadPage.vue  MentorTaskDetailReadPage.vue  TaskAddPage.vue  TaskListPage.vue  TaskModifyPage.vue
src/views/task-eval/: TaskEvalListResultReadPage.vue  TaskEvalResultDetailReadModal.vue  TaskEvalResultGroupMembersReadModal.vue  TaskEvalResultListReadPage.vue
src/views/task-ind/: TaskIndManage.vue
src/views/user/: LoginPage.vue  MenteeInfoPage.vue  MentorInfoPage.vue  UpdatePassword.vue
src/views/wiki/: WikiCreatePage.vue  WikiDetailReadPage.vue  WikiHistoryModal.vue  WikiListReadPage.vue  WikiUpdatePage.vue
(+567 files in other folders)
