[tool.poetry]
name = "hi-hello-fastapi"
version = "0.1.0"
description = "hi-hello-fastapi"
authors = ["kookong2 <hy010309@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
#langchain = "^0.3"
#langserve = "^0.3"
#langchain-openai = "^0.2"
#streamlit = "^1.33.0"
#sse-starlette = "^2.1.0"
#unstructured = {extras = ["pdf"], version = "^0.13.2"}
#faiss-cpu = "^1.8.0"
#langchain-community = "^0.3"
#langchainhub = "^0.1"
#langchain-text-splitters = "^0.3"
#httpx-sse = "^0.4.0"
#sentence-transformers = "^2.6.1"
#langchain-ollama = "^0.2.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
