[tool.poetry]
name = "hi-hello-fastapi"
version = "0.1.0"
description = "hi-hello-fastapi"
authors = ["kookong2 <hy010309@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
#langchain = "^0.3"
#langserve = "^0.3"
#langchain-openai = "^0.2"
#streamlit = "^1.33.0"
#sse-starlette = "^2.1.0"
#unstructured = {extras = ["pdf"], version = "^0.13.2"}
#faiss-cpu = "^1.8.0"
#langchain-community = "^0.3"
#langchainhub = "^0.1"
#langchain-text-splitters = "^0.3"
#httpx-sse = "^0.4.0"
#sentence-transformers = "^2.6.1"
#langchain-ollama = "^0.2.0"
langchain-upstage = "^0.4.0"
langchain = "^0.3.13"
sentence-transformers = "^3.3.1"
transformers = "4.44.2"
tokenizers = "0.19.1"
langchain-community = "^0.3.14"
python-multipart = "^0.0.20"
pymupdf = "^1.25.1"
pinecone-plugin-inference = "1.1.0"
gitpython = "^3.1.44"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"
pyyaml = "^6.0.2"
pygments = "^2.19.0"
send2trash = "^1.8.3"
acres = "^0.2.0"
aiohappyeyeballs = "^2.4.4"
aiohttp = "^3.11.11"
aiosignal = "^1.3.2"
altair = "^5.5.0"
annotated-types = "^0.7.0"
anthropic = "^0.42.0"
anyio = "^4.8.0"
argon2-cffi-bindings = "^21.2.0"
argon2-cffi = "^23.1.0"
arrow = "^1.3.0"
asttokens = "^3.0.0"
async-lru = "^2.0.4"
attrs = "^24.3.0"
babel = "^2.16.0"
beautifulsoup4 = "^4.12.3"
bleach = "^6.2.0"
blinker = "^1.9.0"
cachetools = "^5.5.0"
certifi = "^2024.12.14"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
ci-info = "^0.3.0"
click = "^8.1.8"
colorama = "^0.4.6"
comm = "^0.2.2"
configobj = "^5.0.9"
configparser = "^7.1.0"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.11"
decorator = "^5.1.1"
deepl = "^1.20.0"
defusedxml = "^0.7.1"
distro = "^1.9.0"
document = "^1.0"
etelemetry = "^0.3.1"
executing = "^2.1.0"
fastjsonschema = "^2.21.1"
feedparser = "^6.0.11"
filelock = "^3.16.1"
fitz = "^0.0.1.dev2"
fqdn = "^1.5.1"
frozenlist = "^1.5.0"
fsspec = "^2024.12.0"
gitdb = "^4.0.12"
googleapis-common-protos = "^1.66.0"
greenlet = "^3.1.1"
grpcio = "^1.69.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httplib2 = "^0.22.0"
httpx-sse = "^0.4.0"
httpx = "^0.28.1"
huggingface-hub = "^0.27.0"
idna = "^3.10"
ipykernel = "^6.29.5"
ipython = "^8.31.0"
isodate = "^0.7.2"
isoduration = "^20.11.0"
jedi = "^0.19.2"
jiter = "^0.8.2"
joblib = "^1.4.2"
json5 = "^0.10.0"
jsonpatch = "^1.33"
jsonpointer = "^3.0.0"
jsonschema-specifications = "^2024.10.1"
jsonschema = "^4.23.0"
jupyter-events = "^0.11.0"
jupyter-lsp = "^2.2.5"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
jupyter-server = "^2.15.0"
jupyter-server-terminals = "^0.5.3"
jupyterlab = "^4.3.4"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.27.3"
kiwipiepy = "^0.20.3"
kiwipiepy-model = "^0.20.0"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
langchain-teddynote = "^0.3.41"
langchain-text-splitters = "^0.3.4"
langgraph-checkpoint = "^2.0.9"
langgraph-sdk = "^0.1.48"
langgraph = "^0.2.61"
langserve = "^0.3.1"
langsmith = "^0.2.10"
looseversion = "^1.3.0"
lxml = "^5.3.0"
lz4 = "^4.3.3"
markdown-it-py = "^3.0.0"
marshmallow = "^3.23.3"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
mistune = "^3.1.0"
msgpack = "^1.1.0"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
narwhals = "^1.20.1"
nbclient = "^0.10.2"
nbconvert = "^7.16.5"
nbformat = "^5.10.4"
nest-asyncio = "^1.6.0"
networkx = "^3.4.2"
nibabel = "^5.3.2"
nipype = "^1.9.2"
nltk = "^3.9.1"
notebook = "^7.3.2"
notebook-shim = "^0.2.4"
olefile = "^0.47"
openai = "^1.59.3"
orjson = "^3.10.13"
overrides = "^7.7.0"
packaging = "^24.2"
pandas = "^2.2.3"
pandocfilters = "^1.5.1"
parso = "^0.8.4"
pathlib = "^1.0.1"
pdf2image = "^1.17.0"
pillow = "^11.1.0"
pinecone-client = "^5.0.1"
pinecone-plugin-interface = "^0.0.7"
pinecone-text = "^0.9.0"
platformdirs = "^4.3.6"
prometheus-client = "^0.21.1"
prompt-toolkit = "^3.0.48"
propcache = "^0.2.1"
protoc-gen-openapiv2 = "^0.0.1"
prov = "^2.0.1"
psutil = "^6.1.1"
pure-eval = "^0.2.3"
puremagic = "^1.28"
pycparser = "^2.22"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.4"
pydantic-core = "^2.27.2"
pydeck = "^0.9.1"
pydot = "^3.0.4"
pyparsing = "^3.2.1"
python-dateutil = "^2.9.0.post0"
python-json-logger = "^3.2.1"
pytz = "^2024.2"
pywin32 = "^308"
pywinpty = "^2.0.14"
pyxnat = "^1.6.2"
pyzmq = "^26.2.0"
rank-bm25 = "^0.2.2"
referencing = "^0.35.1"
regex = "^2024.11.6"
requests-toolbelt = "^1.0.0"
requests = "^2.32.3"
rfc3339-validator = "^0.1.4"
rfc3986-validator = "^0.1.1"
rich = "^13.9.4"
rpds-py = "^0.22.3"
safetensors = "^0.5.0"
scipy = "^1.15.0"
setuptools = "^75.7.0"
sgmllib3k = "^1.0.0"
simplejson = "^3.19.3"
six = "^1.17.0"
smmap = "^5.0.2"
sniffio = "^1.3.1"
soupsieve = "^2.6"
stack-data = "^0.6.3"
streamlit = "^1.41.1"
tavily-python = "^0.5.0"
tenacity = "^9.0.0"
terminado = "^0.18.1"
tiktoken = "^0.8.0"
tinycss2 = "^1.4.0"
toml = "^0.10.2"
tornado = "^6.4.2"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
traits = "^6.4.3"
types-python-dateutil = "^2.9.0.20241206"
types-requests = "^2.32.0.20241016"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
uri-template = "^1.3.0"
urllib3 = "^2.3.0"
users = "^1.0.dev0"
watchdog = "^6.0.0"
wcwidth = "^0.2.13"
webcolors = "^24.11.1"
webencodings = "^0.5.1"
websocket-client = "^1.8.0"
wget = "^3.2"
yarl = "^1.18.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
