[tool.poetry]
name = "hihello-ollama-chatbot"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
altair = "5.5.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
attrs = "24.3.0"
beautifulsoup4 = "4.12.3"
blinker = "1.9.0"
cachetools = "5.5.0"
certifi = "2024.12.14"
chain = "1.0"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
dataclasses-json = "0.6.7"
fastapi = "0.115.6"
frozenlist = "1.5.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
httpx-sse = "0.4.0"
idna = "3.10"
jinja2 = "3.1.4"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
langchain = "0.3.13"
langchain-community = "0.3.13"
langchain-core = "0.3.28"
langchain-ollama = "0.2.2"
langchain-text-splitters = "0.3.4"
langserve = "0.3.0"
langsmith = "0.2.4"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.23.2"
mdurl = "0.1.2"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
narwhals = "1.19.0"
numpy = "2.2.0"
ollama = "0.4.4"
orjson = "3.10.12"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.0.0"
propcache = "0.2.1"
protobuf = "5.29.2"
pyarrow = "18.1.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.0"
pydantic-core = "2.27.2"
pydeck = "0.9.1"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyyaml = "6.0.2"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
six = "1.17.0"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.36"
sse-starlette = "2.1.3"
starlette = "0.41.3"
streamlit = "1.41.1"
tenacity = "9.0.0"
toml = "0.10.2"
tornado = "6.4.2"
translator = "0.0.9"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
watchdog = "6.0.0"
yarl = "1.18.3"
langchain-upstage = "^0.4.0"
pinecone = "^5.4.2"
fitz = "^0.0.1.dev2"
pyopencl = "^2024.3"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
